# genet-py

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  tests.yml
src/genet/: __init__.py  model.py
src/genet.egg-info/: PKG-INFO  SOURCES.txt
src/genet/models/: scaler.npz  weights_25.npz  weights_5.npz  weights_50.npz  weights_75.npz  weights_95.npz
src/genet_py.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test.py
