[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genet-py"
version = "0.1.1"
description = "GENET Python library"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "geopack",
    "numpy",
    "pandas",
    "platformdirs",
    "scipy",
    "swvo",
    "black>=26.3.0",
    "pylint>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/DmitriiGurev/genet-py"
Repository = "https://github.com/DmitriiGurev/genet-py"
Issues = "https://github.com/DmitriiGurev/genet-py/issues"

[tool.setuptools.package-data]
genet = ["models/*"]

[tool.setuptools.packages.find]
where = ["src"]